- Mobile bugs fixed (overflow-x was breaking the screen) - Some responsive modifications

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@
 .section-title { 
     text-align: center;
     font-size: 3.5em;
-    color: #12E085
+    color: #12E085;
 }
 
 // Sections
