--- a/src/app/sections/components/projects-section/projects-section.component.scss
+++ b/src/app/sections/components/projects-section/projects-section.component.scss
@@ -1,6 +1,7 @@
 .projects-container {
     display: grid;
     grid-gap: 10px;
+    overflow: hidden;
 
     .project-info {
         display: grid;
@@ -63,7 +64,6 @@
 @media screen and (min-width: 55em) {
     .projects-container {
         .project-info {
-
             .project-image {
                 font-size: 5.5em;
             }
